# ParSyll

./: .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.github/workflow/: backend_tests.yaml
.github/workflows/: backend_build.yaml  backend_tests.yaml  test_workflow.yaml
backend/: .dockerignore  .git-blame-ignore-revs  .gitignore  Pipfile  README.md  database.py  dockerfile  ics_writer.py  main.py  my.ics  pdf_parser.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test.py
backend/auth/: auth_bearer.py  auth_handler.py
backend/etc/: test_pdf_submit.py  test_signup.py
backend/models/: model.py
backend/parsing/: stopwords.py
backend/prompts/: class_timings.txt  class_timings2.txt
backend/routers/: pdfs.py  users.py
backend/src/parsyll_fastapi/: __init__.py  database.py  ics_writer.py  main.py  my.ics
backend/src/parsyll_fastapi/auth/: auth_bearer.py  auth_handler.py
backend/src/parsyll_fastapi/daos/: courseDao.py  userDao.py
backend/src/parsyll_fastapi/doc/: documentation.py
backend/src/parsyll_fastapi/models/: model.py
backend/src/parsyll_fastapi/parsing/: Pipfile  config.ini  configtest.py  course_class.py  factory.py  grading_scheme_class.py  my.ics  nltk_download_script.py  office_hours_timing_class.py  parser_class.py  parser_class_test.py  parser_regex.py  pdf_parser.py  person_class.py  regex_helper.py  stopwords.py  timing_class.py  utility.py
backend/src/parsyll_fastapi/parsing/prompts/: DOW_prompt.txt  class_timings2.txt  class_timings3.txt  course_dynamic.py  course_dynamic.txt  office_hours.txt
backend/src/parsyll_fastapi/routers/: courses.py  parse_pdfs.py  pdfs.py  users.py
backend/src/parsyll_fastapi/tests/: test_pdfs.py
backend/tests/: mocks.py  test_pdfs.py  test_users.py
react-frontend/: .dockerignore  dockerfile  package-lock.json  package.json  tailwind.config.js
react-frontend/public/: index.html  manifest.json
react-frontend/src/: App.js  index.css  index.js
react-frontend/src/api/: Axios.js
react-frontend/src/components/: ButtonLoading.js  CourseDisplay.js  CourseTab.js  DashboardAppBar.js  DropZone.js  ErrorMessage.js  LoginButton.js  LoginButtonDisabled.js  Message.js  PDF.js  PdfUploader.js  PdfViewer.js  UploadPdfButton.js  credentials.js  firebase.js
react-frontend/src/helper/: course.js  firebase.js  jwt.js
react-frontend/src/hooks/: useAuth.js  useLocalStorage.js  useUser.js
react-frontend/src/pages/: CoursePage.js  HomePage.js  LoginPage.js  ParsePdfPage.js  SignUpPage.js  UserPage.js
(+35 files in other folders)
