[project]
name = "ParSyll"
version = "0.0.1"
authors = [
  { name="Dan Peerapatanapokin", email="pongpatapee1021@gmail.com" },
  { name="Abhirakshak Raja", email="abhirakshak10@gmail.com" },
  { name="Kenneth Wong Hon Nam", email="cankennethwong@gmail.com" },
]

description = "Syllabus Parser Webapp"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/Abhirakshak/ParSyll"
"Bug Tracker" = "https://github.com/Abhirakshak/ParSyll/issues"

[tool.setuptools.package-data]
mypkg = ["*.json", "*.rst"]

[tool.setuptools.dynamic]
dependencies = {file = ["backend/requirements.txt"]}
