[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ParSyll"
version = "0.0.1"
authors = [
  { name="Dan Peerapatanapokin", email="pongpatapee1021@gmail.com" },
  { name="Abhirakshak Raja", email="abhirakshak10@gmail.com" },
  { name="Kenneth Wong Hon Nam", email="cankennethwong@gmail.com" },
]

description = "Syllabus Parser Webapp"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/Abhirakshak/ParSyll"
"Bug Tracker" = "https://github.com/Abhirakshak/ParSyll/issues"

[options]
packages = "parsyll-fastapi-backend"
package_dir = "=src"

[options.extras_require]
testing = [
  "pytest>=7.2.1",
  "pytest-cov>=4.0.0",
  "tox>=4.4.5",
  "mypy>=1.0.1",
  "mypy-extensions>=0.4.3",
  "flake8>=6.0.0",
]

[tool.setuptools.package-data]
mypkg = ["*.json", "*.rst"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

# [tool.pytest.ini_options]
# addopts = "--cov=parsyll_fastapi"
# testpaths = [
#     "tests",
# ]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.black]
line-length = 88